# poetry_weather

./: db.sqlite3  pyproject.toml  requirements.txt
WeatherApp/: settings.py  urls.py
static/css/: style.css
static/js/: main.js
weather/: forms.py  models.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_city_date_added.py  0003_remove_city_date_added.py
weather/templates/weather/: delete.html  index.html
